--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,5 @@ ACCESS_TOKEN_EXPIRY=10m
 
 MONGO_URI=your_mongodb_connection_string_here
 FRONTEND_URL=http://localhost:5173
+
+REFRESH_TOKEN_EXPIRY_DAYS=30
